README.md updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tribally_sdk
 description: Tribally SDKs enable your users to create communities and bring in more people to talk about the things they love.
-version: 0.0.1
-homepage: horum.co
+version: 0.0.2
+homepage: https://horum.co
 
 
 
